temporal-verifier/tests/examples/snapshots/fail/sorts/uncallable.fly.snap
---
source: temporal-verifier/tests/test_examples.rs
description: "--expect-fail -- verify tests/examples/fail/sorts/uncallable.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: x was called but it is not a function/definition
  ┌─ tests/examples/fail/sorts/uncallable.fly:7:1
  │
7 │ assert forall x:s. x(true) = x
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


